umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_corina_Clindamycin.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 60
bond_count: 61
sum_formula: C18H33ClN2O5S
graph6: "{hCOGCA?G`?O?@?@??G?@??G??G??O??O??_???G??@???@???@???@????G???G????C????O????_????C????A???G?_?????_????A_?????_?????O?????A??????O??????_?????@???????G??????C???????C???????_??????A???????A???????A????????G????????C????????_???????A?????????@????????@?????????_????????@?????????@??????????_???"
