umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_accldraw_2-methylallyldioxo-sulfane.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 7
bond_count: 6
sum_formula: C4O2S
graph6: FiCGO
