umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_5SD.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 49
bond_count: 52
sum_formula: C19H28O2
graph6: "phCGQC@?O?_@?@O@??G?A??C??G??G?GG??@???O???_??`???@_???O???C????G????_????_????_????A?????_?????_????A?????A?????A??????A??????_?????A??????G??????C??????C??????A???????C???????_??????@???????A????"
