umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_cdk_bug1772609.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 29
bond_count: 34
sum_formula: C29
graph6: "\\hEG_C@AGA?@?@?G_A?C_??G??G??G??C??@??AG??A???@???@????_???G???@???@C"
